objects/autorabit__Setup_Data__c.object
<CustomObject>
    <fields>
        <fullName>autorabit__Access_Token_Expires_At__c</fullName>
        <label>Access Token Expires At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>autorabit__Access_Token__c</fullName>
        <label>Access Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>autorabit__Debug_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>autorabit__Inbound_Authenticated_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inbound Authenticated User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Setup_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>autorabit__Job_Frequency__c</fullName>
        <description>How often the scheduled job will run</description>
        <inlineHelpText>How often the scheduled job will run</inlineHelpText>
        <label>Job Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>24</fullName>
                    <default>true</default>
                    <label>Once Daily</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Every Hour</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Every 2 Hours</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Every 3 Hours</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Every 4 Hours</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Every 6 Hours</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Every 8 Hours</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Every 12 Hours</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>autorabit__Job_Id__c</fullName>
        <description>Id for the scheduled batch job</description>
        <inlineHelpText>Id for the scheduled batch job</inlineHelpText>
        <label>Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>autorabit__Job_Start_Time__c</fullName>
        <description>Time of day at which the first run of the scheduled job will occur</description>
        <label>Job Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASAP</fullName>
                    <label>As Soon As Possible</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>12:00 AM</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1:00 AM</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2:00 AM</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3:00 AM</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4:00 AM</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5:00 AM</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6:00 AM</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>7:00 AM</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>8:00 AM</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>9:00 AM</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10:00 AM</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>11:00 AM</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>12:00 PM</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>1:00 PM</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>2:00 PM</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>3:00 PM</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>4:00 PM</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>5:00 PM</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>6:00 PM</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>7:00 PM</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>8:00 PM</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>9:00 PM</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>10:00 PM</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>11:00 PM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>autorabit__Log_Deletion_Job_Id__c</fullName>
        <description>Used to store id of log deletion batch that can be run from Package Log Settings section of setup</description>
        <label>Log Deletion Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>autorabit__Logging_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Logging Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>autorabit__Max_Logs_Retained__c</fullName>
        <label>Max Logs Retained</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1000</fullName>
                    <default>true</default>
                    <label>1,000</label>
                </value>
                <value>
                    <fullName>5000</fullName>
                    <label>5,000</label>
                </value>
                <value>
                    <fullName>10000</fullName>
                    <label>10,000</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>autorabit__Outbound_Authenticated_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outbound Authenticated User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Setup_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>autorabit__QA_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only for AutoRABIT QA usage</description>
        <label>QA_Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>autorabit__Salesforce_Access_Token__c</fullName>
        <label>Salesforce Access Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Setup Data</label>
    <nameField>
        <label>Setup Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Setup Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>